--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,15 @@
     <version>1.0.0-SNAPSHOT</version>
     <name>FlexMojos - Compatible Model Validator</name>
 
+    <developers>
+        <developer>
+            <name>Frédéric Thomas</name>
+            <organizationUrl>https://github.com/doublefx</organizationUrl>
+            <email>fthomas@apache.org</email>
+            <url>https://github.com/doublefx/flexmojos-compatible-model-validator</url>
+        </developer>
+    </developers>
+
     <build>
         <plugins>
             <plugin>
@@ -36,6 +45,25 @@
                             <goal>generate-metadata</goal>
                             <goal>generate-test-metadata</goal>
                         </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>2.4</version>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>jar-no-fork</goal>
+                            <goal>test-jar</goal>
+                        </goals>
+                        <configuration>
+                            <includePom>true</includePom>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
